Clean up old code in editor