@@ -16,7 +16,7 @@ import utility.TextureScale;
 import java.util.ArrayList;
 import java.util.List;
 
-class TileCollisionShapeEditor {
+final class TileCollisionShapeEditor {
     private enum Mode {
         AddPolygon(() -> {
             ImGui.text("Left click to add new nodes or insert node to edge.");
@@ -51,23 +51,19 @@ class TileCollisionShapeEditor {
     private static final float NodeRadius = 5.0f;
     private static final float EdgeHoverThreshold = 6.0f;
     private static final float ModeSelectableSize = 20.0f;
-
     private static final int TileBackgroundBorderColor = ImGui.getColorU32(0.5f, 0.5f, 0.5f, 1.0f);
     private static final int TileBackgroundFillColor = ImGui.getColorU32(0.1f, 0.1f, 0.1f, 1.0f);
     private static final int NodeColor = ImGui.getColorU32(0.7f, 0.7f, 0.7f, 1.0f);
     private static final int NodeHoverColor = ImGui.getColorU32(0.9f, 0.9f, 0.75f, 1.0f);
     private static final int PolygonColor = ImGui.getColorU32(0.8f, 0.1f, 0.1f, 0.7f);
     private static final int PolygonFillColor = ImGui.getColorU32(0.8f, 0.1f, 0.1f, 0.4f);
-
     private static final int PendingNodeColor = ImGui.getColorU32(0.3f, 0.8f, 04f, 0.8f);
     private static final int PendingLineColor = ImGui.getColorU32(0.3f, 0.8f, 0.3f, 0.8f);
     private static final int PendingCloseLineColor = ImGui.getColorU32(0.8f, 0.8f, 0.3f, 0.6f);
     private static final int EdgeHoverColor = ImGui.getColorU32(0.3f, 0.8f, 0.8f, 1.0f);
-
     private static Tile editingTile = null;
     private static Mode editingMode = null;
     private static int draggingNodeIndex = -1;
-
     private static int hoveringEdge = -1;
     private static boolean draggingNewNode = false;
     private static final List<Vector2f> pendingNodes = new ArrayList<>();
@@ -90,20 +86,17 @@ class TileCollisionShapeEditor {
             resetData();
             return;
         }
-
         if (editingTile != tile) {
             resetData();
             editingTile = tile;
         }
         editingTiles.clear();
         editingTiles.addAll(selectedTiles);
-
         if (!ImGui.beginTable("##TSE_TCSE_Collision_Shape_Editor_Mode_layout", 4, ImGuiTableFlags.SizingFixedFit)) return;
         ImGui.tableSetupColumn("##TSE_TCSE_Collision_Shape_Add_Node_Mode_Column", ImGuiTableColumnFlags.WidthFixed);
         ImGui.tableSetupColumn("##TSE_TCSE_Collision_Shape_Remove_Node_Mode_Column", ImGuiTableColumnFlags.WidthFixed);
         ImGui.tableSetupColumn("##TSE_TCSE_Collision_Shape_Add_Node_Mode_Column", ImGuiTableColumnFlags.WidthFixed);
         ImGui.tableSetupColumn("##TSE_TCSE_Collision_Shape_Reset_Node_Column", ImGuiTableColumnFlags.WidthFixed);
-
         ImGui.tableNextColumn();
         boolean isAddMode = editingMode == Mode.AddPolygon;
         if (EditorWidget.selectableIcon("Add Node##TSE_TCSE_Collision_Add_Node_Mode_Selectable", EditorIcons.Icons.Add, "Click to start adding polygon", isAddMode, ModeSelectableSize, ModeSelectableSize)) {
@@ -117,7 +110,6 @@ class TileCollisionShapeEditor {
                 draggingNewNode = false;
             }
         }
-
         ImGui.tableNextColumn();
         boolean isEditMode = editingMode == Mode.EditPolygon;
         if (EditorWidget.selectableIcon("Edit Node##TSE_TCSE_Collision_Edit_Node_Mode_Selectable", EditorIcons.Icons.EditPen, "Click to start editing polygon", isEditMode, ModeSelectableSize, ModeSelectableSize)) {
@@ -125,7 +117,6 @@ class TileCollisionShapeEditor {
             pendingNodes.clear();
             draggingNewNode = false;
         }
-
         ImGui.tableNextColumn();
         boolean isRemoveMode = editingMode == Mode.RemovePolygon;
         if (EditorWidget.selectableIcon("Remove Node##TSE_TCSE_Collision_Remove_Node_Mode_Selectable", EditorIcons.Icons.Remove, "Click start removing polygon", isRemoveMode, ModeSelectableSize, ModeSelectableSize)) {
@@ -133,7 +124,6 @@ class TileCollisionShapeEditor {
             pendingNodes.clear();
             draggingNewNode = false;
         }
-
         ImGui.tableNextColumn();
         if (EditorWidget.iconButton("Reset Node##TSE_TCSE_Collision_Reset_Node_Button", EditorIcons.Icons.Reset, "Click to reset polygon to tile shape")) {
             pendingNodes.clear();
@@ -141,13 +131,11 @@ class TileCollisionShapeEditor {
             draggingNewNode = false;
             resetToTileShape(tile);
         }
-        
         ImGui.endTable();
         ImGui.separator();
         ImGui.spacing();
         renderTilePreview(tileset.textureID(), tile, tileset.gridSize());
         ImGui.spacing();
-
         if (editingMode != null) {
             ImGui.spacing();
             ImGui.indent();
@@ -161,7 +149,6 @@ class TileCollisionShapeEditor {
             }
             ImGui.spacing();
         }
-
         ImGui.indent();
         boolean polyOpen = ImGui.collapsingHeader("Polygon##TSE_TCSE_Collision_Node_Coordinates_Header_");
         if (!polyOpen) {
@@ -172,7 +159,6 @@ class TileCollisionShapeEditor {
             }
             return;
         }
-
         if (tile.collisionPolygonNodes == null || tile.collisionPolygonNodes.length == 0) {
             ImGui.beginDisabled();
             ImGui.textWrapped("This tile has no collision shape");
@@ -184,28 +170,24 @@ class TileCollisionShapeEditor {
             }
             return;
         }
-
         Vector2f[] nodes = tile.collisionPolygonNodes;
         for (Vector2f node : nodes) {
             Vector2f tmp = new Vector2f(node);
             EditorWidget.dragVec2Ctrl("", tmp, 0.0f, 0.0f, 0.001f, node, 0.0f, 1.0f);
             if (!tmp.equals(node)) {
-                node.set(Math.max(0.0f, Math.min(1.0f, tmp.x)), Math.max(0.0f, Math.min(1.0f, tmp.y)));
+                node.set(Math.clamp(tmp.x, 0.0f, 1.0f), Math.clamp(tmp.y, 0.0f, 1.0f));
                 edited = true;
             }
         }
-
-        if (edited) {
-            updateSelectedTiles();
-            edited = false;
-        }
+        if (!edited) return;
+        updateSelectedTiles();
+        edited = false;
     }
 
     private static void renderTilePreview(int textureID, Tile tile, Vector2i gridSize) {
         if (textureID <= -1 || gridSize == null || gridSize.x < 0 || gridSize.y < 0) return;
         Vector2f[] coordinates = tile.textureCoordinates;
         if (coordinates == null) return;
-
         ImGui.beginGroup();
         Vector2f scaledSize = TextureScale.calculateFitSquare(gridSize.x, gridSize.y, tilePreviewSize);
         float remainWidth = ImGui.getContentRegionAvailX();
@@ -239,11 +221,9 @@ class TileCollisionShapeEditor {
 
     private static void drawTileBackground(Vector2f size) {
         ImDrawList drawList = ImGui.getWindowDrawList();
-
         ImVec2 screenCursorPos = ImGui.getCursorScreenPos();
         ImVec2 rectMin = new ImVec2(screenCursorPos);
         ImVec2 rectMax = new ImVec2(screenCursorPos.x + size.x, screenCursorPos.y + size.y);
-
         drawList.addRectFilled(rectMin, rectMax, TileBackgroundFillColor);
         drawList.addRect(rectMin, rectMax, TileBackgroundBorderColor);
     }
@@ -254,31 +234,26 @@ class TileCollisionShapeEditor {
         if (coordinates == null || coordinates.length < 3) return;
         ImDrawList drawList = ImGui.getWindowDrawList();
         ImVec2 screenCursorPos = ImGui.getCursorScreenPos();
-
         List<ImVec2> screenNodes = new ArrayList<>();
         for (Vector2f node : coordinates) {
             float x = screenCursorPos.x + node.x * size.x;
             float y = screenCursorPos.y + (1.0f - node.y) * size.y;
             screenNodes.add(new ImVec2(x, y));
         }
-
         if (screenNodes.size() >= 3) {
             drawList.removeFlags(ImDrawListFlags.AntiAliasedFill);
             List<int[]> triangles = triangulatePolygon(screenNodes);
             for (int[] tri : triangles) drawList.addTriangleFilled(screenNodes.get(tri[0]), screenNodes.get(tri[1]), screenNodes.get(tri[2]), PolygonFillColor);
             drawList.addFlags(ImDrawListFlags.AntiAliasedFill);
         }
-
         for (int i = 0; i < screenNodes.size(); i++) {
             ImVec2 start = screenNodes.get(i);
             ImVec2 end = screenNodes.get((i + 1) % screenNodes.size());
-
             boolean isHovered = (editingMode == Mode.AddPolygon && hoveringEdge == i);
             int edgeColor = isHovered ? EdgeHoverColor : PolygonColor;
             float edgeThickness = isHovered ? 2.4f : 2.0f;
             drawList.addLine(start, end, edgeColor, edgeThickness);
         }
-
         ImVec2 mousePos = ImGui.getMousePos();
         for (ImVec2 node : screenNodes) {
             boolean isHover = inNodeRadius(node, mousePos);
@@ -288,31 +263,22 @@ class TileCollisionShapeEditor {
 
     private static void drawPendingNodes(Vector2f size) {
         if (editingMode != Mode.AddPolygon || pendingNodes.isEmpty()) return;
-
         ImDrawList drawList = ImGui.getWindowDrawList();
         ImVec2 screenCursorPos = ImGui.getCursorScreenPos();
         ImVec2 mousePos = ImGui.getMousePos();
-
         List<ImVec2> screenNodes = new ArrayList<>();
         for (Vector2f node : pendingNodes) {
             float x = screenCursorPos.x + node.x * size.x;
             float y = screenCursorPos.y + (1.0f - node.y) * size.y;
             screenNodes.add(new ImVec2(x, y));
         }
-
-        for (int i = 0; i < screenNodes.size() - 1; i++) {
-            drawList.addLine(screenNodes.get(i), screenNodes.get(i + 1), PendingLineColor, 2.0f);
-        }
-
+        for (int i = 0; i < screenNodes.size() - 1; i++) drawList.addLine(screenNodes.get(i), screenNodes.get(i + 1), PendingLineColor, 2.0f);
         if (screenNodes.size() >= MinNode) {
             ImVec2 first = screenNodes.getFirst();
             ImVec2 last = screenNodes.getLast();
             if (inNodeRadius(first, mousePos)) drawList.addLine(last, first, PendingCloseLineColor, 2.0f);
         }
-
-        for (ImVec2 node : screenNodes) {
-            drawList.addCircleFilled(node, NodeRadius, PendingNodeColor);
-        }
+        for (ImVec2 node : screenNodes) drawList.addCircleFilled(node, NodeRadius, PendingNodeColor);
     }
 
     private static void handleAddMode(Vector2f size, Tile tile) {
@@ -320,11 +286,10 @@ class TileCollisionShapeEditor {
         ImVec2 screenCursorPos = ImGui.getCursorScreenPos();
         ImVec2 mousePos = ImGui.getMousePos();
         boolean isMouseClick = ImGui.isMouseClicked(ImGuiMouseButton.Left);
-        if (!onPreview(size, mousePos, screenCursorPos)) {
+        if (outsidePreview(size, mousePos, screenCursorPos)) {
             hoveringEdge = -1;
             return;
         }
-
         if (tile.collisionPolygonNodes == null || tile.collisionPolygonNodes.length == 0) handleAddNewPolygon(size, screenCursorPos, mousePos, isMouseClick);
         else handleInsertPolygon(size, tile, screenCursorPos, mousePos, isMouseClick);
     }
@@ -336,51 +301,43 @@ class TileCollisionShapeEditor {
         ImVec2 mousePos = ImGui.getMousePos();
         boolean isMouseDown = ImGui.isMouseDown(ImGuiMouseButton.Left);
         boolean isMouseClick = ImGui.isMouseClicked(ImGuiMouseButton.Left);
-        if (!onPreview(size, mousePos, screenCursorPos)) return;
-
+        if (outsidePreview(size, mousePos, screenCursorPos)) return;
         Vector2f[] nodes = tile.collisionPolygonNodes;
         if (isMouseClick) {
             for (int i = 0; i < nodes.length; i++) {
-                if (!inNodeRadius(size, screenCursorPos, mousePos, nodes[i])) continue;
+                if (outsideNodeRadius(size, screenCursorPos, mousePos, nodes[i])) continue;
                 draggingNodeIndex = i;
                 break;
             }
         }
-
         if (isMouseDown && draggingNodeIndex >= 0 && draggingNodeIndex < nodes.length) {
             nodes[draggingNodeIndex].set(getNormal(mousePos, screenCursorPos, size));
             edited = true;
         }
-
         if (!isMouseDown) draggingNodeIndex = -1;
     }
 
     private static void handleRemoveNode(Vector2f size, Tile tile) {
         if (size == null || tile == null) return;
         if (editingMode != Mode.RemovePolygon || tile.collisionPolygonNodes == null || tile.collisionPolygonNodes.length == 0) return;
-
         ImVec2 screenCursorPos = ImGui.getCursorScreenPos();
         ImVec2 mousePos = ImGui.getMousePos();
         boolean leftClick = ImGui.isMouseClicked(ImGuiMouseButton.Left);
         boolean rightClick = ImGui.isMouseClicked(ImGuiMouseButton.Right);
-
-        if (!onPreview(size, mousePos, screenCursorPos) || (!leftClick && !rightClick)) return;
-
+        if (outsidePreview(size, mousePos, screenCursorPos) || (!leftClick && !rightClick)) return;
         Vector2f[] nodes = tile.collisionPolygonNodes;
         for (int i = 0; i < nodes.length; i++) {
-            if (!inNodeRadius(size, screenCursorPos, mousePos, nodes[i])) continue;
+            if (outsideNodeRadius(size, screenCursorPos, mousePos, nodes[i])) continue;
             if (rightClick) {
                 tile.collisionPolygonNodes = null;
                 edited = true;
                 return;
             }
-
             if (nodes.length <= MinNode) {
                 tile.collisionPolygonNodes = null;
                 edited = true;
                 return;
             }
-
             Vector2f[] newNodes = new Vector2f[nodes.length - 1];
             int index = 0;
             for (int j = 0; j < nodes.length; j++) {
@@ -403,7 +360,6 @@ class TileCollisionShapeEditor {
             draggingNewNode = true;
             pendingNodes.add(normal);
         }
-
         if (draggingNewNode && isMouseDown && !pendingNodes.isEmpty()) pendingNodes.getLast().set(normal);
         if (isMouseRelease) draggingNewNode = false;
     }
@@ -411,7 +367,7 @@ class TileCollisionShapeEditor {
     private static boolean closingPolygon(Vector2f size, ImVec2 screenCursorPos, ImVec2 mousePos) {
         if (pendingNodes.size() < MinNode) return false;
         Vector2f firstNode = pendingNodes.getFirst();
-        if (!inNodeRadius(size, screenCursorPos, mousePos, firstNode)) return false;
+        if (outsideNodeRadius(size, screenCursorPos, mousePos, firstNode)) return false;
         addPendingNodes();
         draggingNewNode = false;
         return true;
@@ -430,8 +386,6 @@ class TileCollisionShapeEditor {
             hoveringEdge = -1;
             return;
         }
-
-        hoveringEdge = -1;
         float minDist = EdgeHoverThreshold;
         int nearestEdge = -1;
         for (int i = 0; i < nodes.length; i++) {
@@ -444,14 +398,12 @@ class TileCollisionShapeEditor {
             minDist = (float) Math.sqrt(distSqr);
             nearestEdge = i;
         }
-
         hoveringEdge = nearestEdge;
         if (isMouseClick && hoveringEdge >= 0) insertNodeToEdge(tile, size, screenCursorPos, mousePos, hoveringEdge);
     }
 
     private static void insertNodeToEdge(Tile tile, Vector2f size, ImVec2 screenCursorPos, ImVec2 mousePos, int edgeIndex) {
         Vector2f[] currentNodes = tile.collisionPolygonNodes;
-
         Vector2f normal = getNormal(mousePos, screenCursorPos, size);
         Vector2f start = currentNodes[edgeIndex];
         Vector2f end = currentNodes[(edgeIndex + 1) % currentNodes.length];
@@ -459,9 +411,7 @@ class TileCollisionShapeEditor {
         Vector2f[] newNodes = new Vector2f[currentNodes.length + 1];
         System.arraycopy(currentNodes, 0, newNodes, 0, edgeIndex + 1);
         newNodes[edgeIndex + 1] = projected;
-        if (currentNodes.length - (edgeIndex + 1) >= 0) {
-            System.arraycopy(currentNodes, edgeIndex + 1, newNodes, edgeIndex + 1 + 1, currentNodes.length - (edgeIndex + 1));
-        }
+        if (currentNodes.length - (edgeIndex + 1) >= 0) System.arraycopy(currentNodes, edgeIndex + 1, newNodes, edgeIndex + 1 + 1, currentNodes.length - (edgeIndex + 1));
         tile.collisionPolygonNodes = newNodes;
         edited = true;
         hoveringEdge = -1;
@@ -473,7 +423,7 @@ class TileCollisionShapeEditor {
         float lengthSqr = segment.lengthSquared();
         if (lengthSqr == 0) return new Vector2f(start);
         float t = p.dot(segment) / lengthSqr;
-        t = Math.max(0.0f, Math.min(1.0f, t));
+        t = Math.clamp(t, 0.0f, 1.0f);
         return new Vector2f(start).add(new Vector2f(segment).mul(t));
     }
 
@@ -482,30 +432,27 @@ class TileCollisionShapeEditor {
         float dy = end.y - start.y;
         float px = mousePos.x - start.x;
         float py = mousePos.y - start.y;
-
         if (dx == 0.0f && dy == 0.0f) return px * px + py * py;
-
         float t = (px * dx + py * dy) / (dx * dx + dy * dy);
-        t = Math.max(0.0f, Math.min(1.0f, t));
+        t = Math.clamp(t, 0.0f, 1.0f);
         float nearX = start.x + t * dx;
         float nearY = start.y + t * dy;
         px = mousePos.x - nearX;
         py = mousePos.y - nearY;
-
         return px * px + py * py;
     }
 
     private static Vector2f getNormal(ImVec2 mousePos, ImVec2 screenCursorPos, Vector2f size) {
         float normalX = (mousePos.x - screenCursorPos.x) / size.x;
         float normalY = 1.0f - (mousePos.y - screenCursorPos.y) / size.y;
-        normalX = Math.max(0.0f, Math.min(1.0f, normalX));
-        normalY = Math.max(0.0f, Math.min(1.0f, normalY));
+        normalX = Math.clamp(normalX, 0.0f, 1.0f);
+        normalY = Math.clamp(normalY, 0.0f, 1.0f);
         return new Vector2f(normalX, normalY);
     }
 
-    private static boolean onPreview(Vector2f size, ImVec2 mousePos, ImVec2 screenCursorPos) {
-        return mousePos.x >= screenCursorPos.x - NodeRadius && mousePos.x <= screenCursorPos.x + size.x + NodeRadius
-                && mousePos.y >= screenCursorPos.y - NodeRadius && mousePos.y <= screenCursorPos.y + size.y + NodeRadius;
+    private static boolean outsidePreview(Vector2f size, ImVec2 mousePos, ImVec2 screenCursorPos) {
+        return !(mousePos.x >= screenCursorPos.x - NodeRadius) || !(mousePos.x <= screenCursorPos.x + size.x + NodeRadius)
+                || !(mousePos.y >= screenCursorPos.y - NodeRadius) || !(mousePos.y <= screenCursorPos.y + size.y + NodeRadius);
     }
 
     private static boolean inNodeRadius(ImVec2 screenNode, ImVec2 mousePos) {
@@ -515,26 +462,21 @@ class TileCollisionShapeEditor {
         return dSqr < NodeRadius * NodeRadius;
     }
 
-    private static boolean inNodeRadius(Vector2f size, ImVec2 screenCursorPos, ImVec2 mousePos, Vector2f nodes) {
+    private static boolean outsideNodeRadius(Vector2f size, ImVec2 screenCursorPos, ImVec2 mousePos, Vector2f nodes) {
         float x = screenCursorPos.x + nodes.x * size.x;
         float y = screenCursorPos.y + (1.0f - nodes.y) * size.y;
-
         float dx = mousePos.x - x;
         float dy = mousePos.y - y;
         float dSqr = dx * dx + dy * dy;
-        return dSqr <= NodeRadius * NodeRadius;
+        return !(dSqr <= NodeRadius * NodeRadius);
     }
 
     private static List<int[]> triangulatePolygon(List<ImVec2> vertices) {
         List<int[]> triangles = new ArrayList<>();
         if (vertices == null || vertices.size() < 3) return triangles;
-
         boolean clockwise = polygonClockwise(vertices);
         List<Integer> indices = new ArrayList<>();
-        for (int i = 0; i < vertices.size(); i++) {
-            indices.add(i);
-        }
-
+        for (int i = 0; i < vertices.size(); i++) indices.add(i);
         int tries = 0;
         int maxTrial = vertices.size() * 2;
         while(indices.size() > 3 && tries < maxTrial) {
@@ -553,9 +495,7 @@ class TileCollisionShapeEditor {
 
             if (!earFound) tries++;
         }
-
         if (indices.size() == 3) triangles.add(new int[]{indices.get(0), indices.get(1), indices.get(2)});
-
         return triangles;
     }
 
@@ -563,16 +503,12 @@ class TileCollisionShapeEditor {
         ImVec2 i = vertices.get(past);
         ImVec2 i1 = vertices.get(current);
         ImVec2 i2 = vertices.get(next);
-
         if (!isConvex(i, i1, i2, clockwise)) return false;
-
         for (int index : indices) {
             if (index == past || index == current || index == next) continue;
-
             ImVec2 p = vertices.get(index);
             if (pointInTriangle(p, i, i1, i2)) return false;
         }
-
         return true;
     }
 
@@ -588,7 +524,6 @@ class TileCollisionShapeEditor {
     private static boolean pointInTriangle(ImVec2 p, ImVec2 a, ImVec2 b, ImVec2 c) {
         float deno = (b.y - c.y) * (a.x - c.x) + (c.x - b.x) * (a.y - c.y);
         if (Math.abs(deno) < 0.00001f) return false;
-
         float alpha = ((b.y - c.y) * (p.x - c.x) + (c.x - b.x) * (p.y - c.y)) / deno;
         float beta = ((c.y - a.y) * (p.x - c.x) + (a.x - c.x) * (p.y - c.y)) / deno;
         float gamma = 1.0f - alpha - beta;
@@ -602,7 +537,6 @@ class TileCollisionShapeEditor {
             ImVec2 v2 = vertices.get((i + 1) % vertices.size());
             sum += (v2.x - v1.x) * (v2.y + v1.y);
         }
-
         return sum > 0.0f;
     }
 
